bugfix + optimization config added

--- a/seq2seq_example.ipynb
+++ b/seq2seq_example.ipynb
@@ -223,6 +223,10 @@
     "    residual_connections=residual_connections, \n",
     "    residual_dense=residual_dense,\n",
     "    training_mode=training_mode,\n",
+    "    learning_rate=1e-4,\n",
+    "    lr_decay_steps=100000,\n",
+    "    lr_decay_koef=0.99,\n",
+    "    gradient_clip=10.0,\n",
     "    scheduled_sampling_probability=scheduled_sampling_probability,\n",
     "    inference_mode=inference_mode,\n",
     "    beam_width=beam_width)"
