updates for last newer TF commit

--- a/seq2seq_example.ipynb
+++ b/seq2seq_example.ipynb
@@ -178,13 +178,13 @@
     "    target_key=[\"targets\", \"targets_length\"], \n",
     "    batch_size=16, shuffle=False, num_epochs=None, \n",
     "    queue_capacity=128, num_threads=2, \n",
-    "    pad_data=True)\n",
+    "    pad_value=0)\n",
     "dg_test_input_fn = generator_input_fn(\n",
     "    x=data_generator_py(), \n",
     "    target_key=[\"targets\", \"targets_length\"], \n",
     "    batch_size=16, shuffle=False, num_epochs=None, \n",
     "    queue_capacity=128, num_threads=1, \n",
-    "    pad_data=True)"
+    "    pad_value=0)"
    ]
   },
   {
@@ -244,14 +244,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/scitator/.conda/envs/python3/lib/python3.5/site-packages/tensorflow/python/ops/gradients_impl.py:93: UserWarning: Converting sparse IndexedSlices to a dense Tensor of unknown shape. This may consume a large amount of memory.\n",
+      "/home/scitator/anaconda3/envs/python3/lib/python3.5/site-packages/tensorflow/python/ops/gradients_impl.py:93: UserWarning: Converting sparse IndexedSlices to a dense Tensor of unknown shape. This may consume a large amount of memory.\n",
       "  \"Converting sparse IndexedSlices to a dense Tensor of unknown shape. \"\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "({'global_step': 20000, 'loss': 1.4086145}, [])"
+       "({'global_step': 20001, 'loss': 1.4225006}, [])"
       ]
      },
      "execution_count": 13,
@@ -272,7 +272,7 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -281,7 +281,7 @@
     "    target_key=[\"targets\", \"targets_length\"], \n",
     "    batch_size=1, shuffle=False, num_epochs=None, \n",
     "    queue_capacity=128, num_threads=1, \n",
-    "    pad_data=True)"
+    "    pad_value=0)"
    ]
   },
   {
@@ -329,26 +329,26 @@
     {
      "data": {
       "text/plain": [
-       "{'prediction': array([[6, 6, 6],\n",
-       "        [6, 6, 6],\n",
-       "        [8, 8, 8],\n",
-       "        [6, 6, 6],\n",
-       "        [8, 8, 8],\n",
-       "        [8, 8, 8],\n",
-       "        [8, 8, 8],\n",
-       "        [6, 7, 6],\n",
-       "        [7, 6, 4],\n",
+       "{'prediction': array([[4, 7, 7],\n",
+       "        [7, 4, 4],\n",
+       "        [7, 7, 3],\n",
+       "        [3, 3, 7],\n",
+       "        [3, 3, 3],\n",
+       "        [3, 3, 3],\n",
+       "        [7, 7, 3],\n",
+       "        [3, 3, 7],\n",
+       "        [2, 2, 8],\n",
        "        [1, 1, 1]], dtype=int32),\n",
-       " 'score': array([[ -0.93742329,  -1.8061161 ,  -2.12716746],\n",
-       "        [ -2.07956624,  -2.1749537 ,  -2.72282457],\n",
-       "        [ -2.95210361,  -3.2315228 ,  -3.28963161],\n",
-       "        [ -3.79508209,  -4.02762842,  -4.25056982],\n",
-       "        [ -4.67095232,  -4.87367201,  -4.93410778],\n",
-       "        [ -5.75341511,  -5.80253267,  -5.91139364],\n",
-       "        [ -7.16523552,  -7.17303467,  -7.29554892],\n",
-       "        [ -8.72199059,  -8.78137302,  -8.81359291],\n",
-       "        [-10.14611435, -10.28177261, -10.28923321],\n",
-       "        [-10.32831287, -10.48070526, -10.52735806]], dtype=float32)}"
+       " 'score': array([[ -1.30532646,  -1.40234065,  -2.01590633],\n",
+       "        [ -2.61503649,  -2.67113137,  -2.75085378],\n",
+       "        [ -3.86323595,  -3.9266541 ,  -3.98291349],\n",
+       "        [ -4.84883213,  -4.90147924,  -5.0093708 ],\n",
+       "        [ -5.78528881,  -5.83146334,  -5.87631416],\n",
+       "        [ -6.80954361,  -6.83886814,  -6.84264088],\n",
+       "        [ -8.07672405,  -8.10203648,  -8.12807655],\n",
+       "        [ -9.42596436,  -9.43244457,  -9.45780849],\n",
+       "        [-10.97326565, -10.99789333, -10.99912453],\n",
+       "        [-11.07780743, -11.07973576, -11.10590267]], dtype=float32)}"
       ]
      },
      "execution_count": 18,
@@ -359,13 +359,23 @@
    "source": [
     "pred"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:python3]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-python3-py"
   },
   "language_info": {
    "codemirror_mode": {
