--- a/seq2seq_example_tatoeba_inference.ipynb
+++ b/seq2seq_example_tatoeba_inference.ipynb
@@ -94,7 +94,7 @@
     "    target_key=[\"targets\", \"targets_length\"],\n",
     "    batch_size=1, shuffle=False, num_epochs=1,\n",
     "    queue_capacity=1024, num_threads=1,\n",
-    "    pad_data=True)"
+    "    pad_value=0)"
    ]
   },
   {
@@ -436,7 +436,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
